<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amtrak</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitleMain">Amtrak Train Arrival Time</string>
    <string name="txtImageDes">Amtrak</string>
    <string name="txtBoard">Boarding Time:</string>
    <string name="txtTripLength">Length of trip:</string>
    <string name="txtHour">Hour</string>
    <string name="txtMin">Minutes</string>
    <string name="btn">Calculate</string>
    <string name="txtTitleTravelTime">Travel Time</string>
    <string name="txtArrivalTime">Arrival Time:</string>
    <string name="title_activity_travel_time">Travel Time</string>

</resources>
